--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "next": "13.2.1",
+    "next-react-svg": "^1.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^6.5.1"
   }
 }
