--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.16.1",
+    "react-share": "^4.4.1",
     "react-toastify": "^9.1.1"
   },
   "devDependencies": {
