--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.16.1",
     "react-share": "^4.4.1",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "react-web-share": "^2.0.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1"
