--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-modal": "^3.16.1",
     "react-share": "^4.4.1",
     "react-toastify": "^9.1.1",
-    "react-web-share": "^2.0.2"
+    "react-web-share": "^2.0.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1"
