--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^6.24.1",
     "react-share": "^4.4.1",
     "react-toastify": "^9.1.1",
     "react-web-share": "^2.0.2",
